# jedi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dev/active/vis-decoder/: vis-decoder-code-review.md
docs/: program.md
docs/superpowers/plans/: 2026-04-21-jedi-brats-contrast-implementation.md
docs/superpowers/specs/: 2026-04-21-jedi-brats-contrast-design.md
idea-stage/: IDEA_REPORT.md
src/jedi/: infer.py  train_decoder.py  train_encoder.py  utils.py
src/jedi/config/: train_decoder.yaml  train_encoder.yaml
src/jedi/config/data/: brats2023.yaml
src/jedi/config/model/: decoder.yaml  encoder.yaml  vis_decoder.yaml
src/jedi/config/trainer/: default.yaml
src/jedi/data/: __init__.py  brats.py  transforms.py
src/jedi/models/: __init__.py  components.py  decoder3d.py  jepa.py  predictor.py  regularizers.py  transformer.py  vis_decoder.py  vit3d.py  wavelet_loss.py
src/jedi/training/: __init__.py  callbacks.py  decoder_module.py  encoder_module.py  logging.py  optim.py  schedule.py  trainer_config.py
tests/: test_brats_dataset.py  test_decoder_step.py  test_encoder_step.py  test_flash_attn.py  test_metric_callbacks.py  test_trainer_config.py  test_training_logging.py  test_transforms.py  test_vis_decoder.py  test_vit3d_shapes.py  test_wavelet_loss.py
